cmake_minimum_required(VERSION 2.6)

project(snet-tools)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
    message(FATAL_ERROR "Compiler ${CMAKE_CXX_COMPILER} has no C++11 support.")
endif()

# Automatically set the version number
set(SNET_TOOLS_VERSION_MAJOR \"1\")
set(SNET_TOOLS_VERSION_MINOR \"1pre\")
include_directories("${PROJECT_BINARY_DIR}/src")
configure_file (
    "${PROJECT_SOURCE_DIR}/src/Config.h.in"
    "${PROJECT_BINARY_DIR}/src/Config.h"
)

# Add include path for Microsoft Windows
set(HDLCD_INCLUDE_DIR "/usr/local/include" CACHE FILEPATH "/usr/local/include")
if (NOT EXISTS ${HDLCD_INCLUDE_DIR}/HdlcdPacket.h)
    message(SEND_ERROR "Can't find the HDLC Daemon header files in ${HDLCD_INCLUDE_DIR}")
endif()
include_directories(${HDLCD_INCLUDE_DIR})

add_subdirectory(src)
